# share-framework

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
examples/: compute_s_index.py  score_dataset.py
share/: __init__.py  scorer.py  signals.py
