[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "share-framework"
version = "0.1.0"
description = "SHARE Framework: A universal metric for scientific data sharing quality"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Shuhan He", email = "research@conductscience.com"},
    {name = "Yijian Henry He"},
    {name = "Louise Corscadden"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ConductScience-Foundation/share-framework"
Documentation = "https://github.com/ConductScience-Foundation/share-framework#readme"
Repository = "https://github.com/ConductScience-Foundation/share-framework"
Issues = "https://github.com/ConductScience-Foundation/share-framework/issues"
